管理端修改调用的AI大模型